extended comments in pedelec, otfvis, myRunMatsim. do to: pedelecTeleport